--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 
     <div class="container">
-        <h1>Angular smart-table Example with Add,Edit and Delete Record</h1>
+        <h1>Example with Add,Edit and Delete Record</h1>
         <div class="row ">
             <div class="col-lg-12">
-                <button onclick="addRecord()" class="btn btn-info float-right my-4">+ Add New Employee</button>
+                <button class="btn btn-info float-right my-4" data-toggle="modal" data-target="#createModal">+ Add New Employee</button>
             </div>
         </div>
         <table class="table table-responsive table-striped">
@@ -35,7 +35,7 @@
                 <tr>
 
                     <th colspan="5">
-                        <input placeholder="global search" class="form-control" type="search" />
+                        <input placeholder="global search" autocomplete="off" name="search" class="form-control" type="search" onkeydown="filterTable(event)"/>
                     </th>
                     <!--  <form action="" class="">
                             <input type="search" class="form-control" placeholder="global search"
@@ -56,6 +56,50 @@
     </div>
 
     <!-- Modal -->
+
+    <!-- Create Modal -->
+    <div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="employeeCreate"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="employeeCreate">Add employee</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="createName" class="col-sm-2 col-form-label">Name:*</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="createName">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="createAge" class="col-sm-2 col-form-label">Age:*</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="createAge">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="createSalary" class="col-sm-2 col-form-label">Salary:*</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="createSalary">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal" onclick="addRecord()">Save</button>
+                    <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Check, update, delete -->
     <div class="modal fade" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="employeeDetails"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -87,10 +131,30 @@
                     </button>
                 </div>
                 <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="updateName" class="col-sm-2 col-form-label">Name:*</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="updateName">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="updateAge" class="col-sm-2 col-form-label">Age:*</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="updateAge">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="updateSalary" class="col-sm-2 col-form-label">Salary:*</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="updateSalary">
+                            </div>
+                        </div>
+                    </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success" data-dismiss="modal">Save</button>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
 
                 </div>
             </div>
@@ -108,9 +172,11 @@
                     </button>
                 </div>
                 <div class="modal-body">
+                    <p>Are you sure you want do delete this employee from the database?</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>
+                    <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
